--- a/bian-dang/package.json
+++ b/bian-dang/package.json
@@ -26,7 +26,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-image-lightbox": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
