--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "biandangmagazine",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A small static site built in gatsby.js",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "npm run build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
@@ -24,7 +23,6 @@
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.10.0",
-    "gh-pages": "^3.1.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
@@ -36,9 +34,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/biandangmagazine"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/biandangmagazine"
   }
 }
