--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.5.3",
     "gatsby": "^2.25.3",
+    "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.10.0",
